--- a/DevPortal/_multiple_app_signup_form.html.liquid
+++ b/DevPortal/_multiple_app_signup_form.html.liquid
@@ -50,7 +50,7 @@
                               	
                               	<div class="row">
                     		  		<div class="col-md-12">
-                      					<input type="checkbox" name="plan_ids[]" value="{{ plan.id }}">Signup to {{ plan.name }}</input>
+                      					<input type="checkbox" name="plan_ids[]" value="{{ plan.id }}">Signup to {{ plan.name }} : {{ service.service_plans.first.id }}  </input>
                                 <input type="hidden" name="plan_ids[]" value="{{ service.service_plans.first.id }}"></input>
                     				</div>
                   				</div>
